pyk/src/tests/unit/kore/test-data/definitions/pass/test-sort-5.kore
[]

module TEST-SORT-5

  sort a{} []

endmodule []
