pyk/src/tests/unit/kore/test-data/definitions/fail/test-exception-27.kore
[]

module TEST-EXCEPTION-27

  /a

endmodule []
